Cherry-pick 291881@main (cc0a0f907148). https://bugs.webkit.org/show_bug.cgi?id=289337

REGRESSION (285042@main-285687@main): `RegExp["$&"]` incorrectly returns an empty string
    https://bugs.webkit.org/show_bug.cgi?id=289337
    rdar://146622507

    Reviewed by Yijia Huang.

    For Atom matching, we need to update RegExpCachedResult correctly to
    update RegExp.rightContext / RegExp.lastMatch etc. This patch does it.

    1. For normal RegExp matching, we just store the lastResult to update
       the cache.
    2. For Atom string matching, we use last matched string index, creating
       MatchResult from that and update the cache with it.
    3. For one character matching, we do not want to make this slower by
       getting the last offset of matched character since these fields are
       rarely accessed. Instead, we record oneCharacterMatch flag, and when
       reifying the result, we scan the string from reverse order to find
       the last matched one character.

    * JSTests/stress/regexp-cache-adjustment.js: Added.
    (shouldBe):
    (clearCache):
    * Source/JavaScriptCore/dfg/DFGOperations.cpp:
    (JSC::DFG::JSC_DEFINE_JIT_OPERATION):
    * Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:
    * Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:
    (JSC::DFG::SpeculativeJIT::compileRegExpTestInline):
    * Source/JavaScriptCore/ftl/FTLAbstractHeapRepository.h:
    * Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
    (JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):
    * Source/JavaScriptCore/runtime/JSGlobalObject.cpp:
    (JSC::JSGlobalObject::init):
    * Source/JavaScriptCore/runtime/RegExpCachedResult.cpp:
    (JSC::RegExpCachedResult::lastResult):
    * Source/JavaScriptCore/runtime/RegExpCachedResult.h:
    (JSC::RegExpCachedResult::offsetOfOneCharacterMatch):
    * Source/JavaScriptCore/runtime/RegExpGlobalData.h:
    * Source/JavaScriptCore/runtime/RegExpGlobalDataInlines.h:
    (JSC::RegExpCachedResult::record):
    (JSC::RegExpGlobalData::performMatch):
    (JSC::RegExpGlobalData::recordMatch):
    (JSC::RegExpGlobalData::resetResultFromCache):
    * Source/JavaScriptCore/runtime/RegExpMatchesArray.h:
    * Source/JavaScriptCore/runtime/RegExpObjectInlines.h:
    (JSC::RegExpObject::execInline):
    (JSC::genericMatches):
    (JSC::collectGlobalAtomMatches):
    * Source/JavaScriptCore/runtime/RegExpSubstringGlobalAtomCache.cpp:
    (JSC::RegExpSubstringGlobalAtomCache::collectMatches):
    * Source/JavaScriptCore/runtime/RegExpSubstringGlobalAtomCache.h:
    * Source/JavaScriptCore/runtime/StringPrototype.cpp:
    (JSC::removeUsingRegExpSearch):

    Canonical link: https://commits.webkit.org/291881@main

Canonical link: https://commits.webkit.org/290945.55@webkitglib/2.48